Pop-ups mobile complete

--- a/popups.html
+++ b/popups.html
@@ -128,49 +128,156 @@
       </table>
     </section>
 
+<!--- Mobile Version --------------------------------------------------------------------------------->
+
     <section class="contents--popups--mobile" style="display: none">
       <div class="drk-grey-ul">
         <ul>
-          <li><b>venue</b></li>
-          <li>venue</li>
-          <li><b>location</b></li>
-          <li>venue</li>
-          <li><b>date</b></li>
-          <li>venue</li>
-          <li><b>time</b></li>
-          <li>venue</li>
-          <li><b>ticket location</b></li>
-          <li>venue</li>
+          <li class="mobile--header">Venue</li>
+          <li class="mobile--content"><a href="https://www.bigpicltd.com/" target="_blank">Paint & Sip</a></li>
+          <li class="mobile--header">Location</li>
+          <li class="mobile--content">Nassau, Bahamas</li>
+          <li class="mobile--header">Date</li>
+          <li class="mobile--content">8/23/2020</li>
+          <li class="mobile--header">Time</li>
+          <li class="mobile--content">9am - 12pm</li>
+          <li class="mobile--header">Ticket location</li>
+          <li class="mobile--content"><a href="https://bahamar.com/casino/" target="_blank">Bahamar Casino</a></li>
         </ul>
       </div>
 
       <div class="lgt-grey-ul">
         <ul>
-          <li><b>venue</b></li>
-          <li>venue</li>
-          <li><b>location</b></li>
-          <li>venue</li>
-          <li><b>date</b></li>
-          <li>venue</li>
-          <li><b>time</b></li>
-          <li>venue</li>
-          <li><b>ticket location</b></li>
-          <li>venue</li>
+          <li class="mobile--header">Venue</li>
+          <li class="mobile--content"><a href="https://www.nippersbar.com/" target="_blank">Nipper's Bar & Grill</a></li>
+          <li class="mobile--header">Location</li>
+          <li class="mobile--content">Abaco, Bahamas</li>
+          <li class="mobile--header">Date</li>
+          <li class="mobile--content">10/31/2020</li>
+          <li class="mobile--header">Time</li>
+          <li class="mobile--content">8am - 11pm</li>
+          <li class="mobile--header">Ticket location</li>
+          <li class="mobile--content" style="color:#6FC09C; font-weight:bold">REGISTRATION CLOSED</li>
         </ul>
       </div>
 
       <div class="drk-grey-ul">
         <ul>
-          <li><b>venue</b></li>
-          <li>venue</li>
-          <li><b>location</b></li>
-          <li>venue</li>
-          <li><b>date</b></li>
-          <li>venue</li>
-          <li><b>time</b></li>
-          <li>venue</li>
-          <li><b>ticket location</b></li>
-          <li>venue</li>
+          <li class="mobile--header">Venue</li>
+          <li class="mobile--content"><a href="https://www.chatnchill.com/" target="_blank">Chat 'n Chill'</a></li>
+          <li class="mobile--header">Location</li>
+          <li class="mobile--content">Exuma, Bahamas</li>
+          <li class="mobile--header">Date</li>
+          <li class="mobile--content">12/6/2020</li>
+          <li class="mobile--header">Time</li>
+          <li class="mobile--content">3pm - 5pm</li>
+          <li class="mobile--header">Ticket location</li>
+          <li class="mobile--content" style="color:#6FC09C; font-weight:bold">REGISTRATION CLOSED</li>
+        </ul>
+      </div>
+
+      <div class="lgt-grey-ul">
+        <ul>
+          <li class="mobile--header">Venue</li>
+          <li class="mobile--content"><a href="https://cinema.usc.edu/" target="_blank">USC SCA Courtyard</a></li>
+          <li class="mobile--header">Location</li>
+          <li class="mobile--content">Los Angeles, CA</li>
+          <li class="mobile--header">Date</li>
+          <li class="mobile--content">12/14/2020</li>
+          <li class="mobile--header">Time</li>
+          <li class="mobile--content">1pm - 3pm</li>
+          <li class="mobile--header">Ticket location</li>
+          <li class="mobile--content"><a href="https://trojanevents.usc.edu/tcc/" target="_blank">Tutor Campus Center</a></li>
+        </ul>
+      </div>
+
+      <div class="drk-grey-ul">
+        <ul>
+          <li class="mobile--header">Venue</li>
+          <li class="mobile--content"><a href="http://www.venue550.com/" target="_blank">Venue550</a></li>
+          <li class="mobile--header">Location</li>
+          <li class="mobile--content">San Francisco, CA</li>
+          <li class="mobile--header">Date</li>
+          <li class="mobile--content">1/1/2020</li>
+          <li class="mobile--header">Time</li>
+          <li class="mobile--content">9am - 12pm</li>
+          <li class="mobile--header">Ticket location</li>
+          <li class="mobile--content"><a href="http://www.venue550.com/" target="_blank">Venue550 website</a></li>
+        </ul>
+      </div>
+
+      <div class="lgt-grey-ul">
+        <ul>
+          <li class="mobile--header">Venue</li>
+          <li class="mobile--content"><a href="https://viterbischool.usc.edu/" target="_blank">USC Viterbi Courtyard</a></li>
+          <li class="mobile--header">Location</li>
+          <li class="mobile--content">Los Angeles, CA</li>
+          <li class="mobile--header">Date</li>
+          <li class="mobile--content">1/15/2021</li>
+          <li class="mobile--header">Time</li>
+          <li class="mobile--content">3pm - 5pm</li>
+          <li class="mobile--header">Ticket location</li>
+          <li class="mobile--content"><a href="https://trojanevents.usc.edu/tcc/" target="_blank">Tutor Campus Center</a></li>
+        </ul>
+      </div>
+
+      <div class="drk-grey-ul">
+        <ul>
+          <li class="mobile--header">Venue</li>
+          <li class="mobile--content"><a href="https://www.sgloft.com/" target="_blank">The Secret Garden Loft</a></li>
+          <li class="mobile--header">Location</li>
+          <li class="mobile--content">Hollywood, CA</li>
+          <li class="mobile--header">Date</li>
+          <li class="mobile--content">4/27/2021</li>
+          <li class="mobile--header">Time</li>
+          <li class="mobile--content">8pm - 10pm</li>
+          <li class="mobile--header">Ticket location</li>
+          <li class="mobile--content"><a href="https://www.sgloft.com/" target="_blank">SGLoft- Front Desk</a></li>
+        </ul>
+      </div>
+
+      <div class="lgt-grey-ul">
+        <ul>
+          <li class="mobile--header">Venue</li>
+          <li class="mobile--content"><a href="https://www.chatnchill.com/" target="_blank">Chat 'n Chill'</a></li>
+          <li class="mobile--header">Location</li>
+          <li class="mobile--content">Exuma, Bahamas</li>
+          <li class="mobile--header">Date</li>
+          <li class="mobile--content">4/29/2021</li>
+          <li class="mobile--header">Time</li>
+          <li class="mobile--content">1pm - 3pm</li>
+          <li class="mobile--header">Ticket location</li>
+          <li class="mobile--content" style="color:#6FC09C; font-weight:bold">REGISTRATION CLOSED</li>
+        </ul>
+      </div>
+
+      <div class="drk-grey-ul">
+        <ul>
+          <li class="mobile--header">Venue</li>
+          <li class="mobile--content"><a href="https://grabbersatsunset.com/" target="_blank">Grabbers Bar & Grill</a></li>
+          <li class="mobile--header">Location</li>
+          <li class="mobile--content">Abaco, Bahamas</li>
+          <li class="mobile--header">Date</li>
+          <li class="mobile--content">7/5/2021</li>
+          <li class="mobile--header">Time</li>
+          <li class="mobile--content">9am - 12pm</li>
+          <li class="mobile--header">Ticket location</li>
+          <li class="mobile--content"><a href="https://grabbersatsunset.com/" target="_blank">Grabbers website</a></li>
+        </ul>
+      </div>
+
+      <div class="lgt-grey-ul">
+        <ul>
+          <li class="mobile--header">Venue</li>
+          <li class="mobile--content"><a href="https://www.bigpicltd.com/" target="_blank">Paint & Sip</a></li>
+          <li class="mobile--header">Location</li>
+          <li class="mobile--content">Nassau, Bahamas</li>
+          <li class="mobile--header">Date</li>
+          <li class="mobile--content">8/23/2021</li>
+          <li class="mobile--header">Time</li>
+          <li class="mobile--content">3pm - 5pm</li>
+          <li class="mobile--header">Ticket location</li>
+          <li class="mobile--content"><a href="https://bahamar.com/casino/" target="_blank">Bahamar Casino</a></li>
         </ul>
       </div>
     </section>
