--- a/about.html
+++ b/about.html
@@ -39,19 +39,19 @@
           and advocating for the user. When I'm not coding, sketching, or
           obsessing over Augmented Reality, you'll find me working out at the
           gym, cooking, or at the nearest Carnival Festival. </h3>
-          <div class="line" style="width: 93%"></div>
+          <div class="line" style="width: 99%"></div>
           <section class="palette">
-            <div class="col-sm-1"><img src="assets/images/about/pal-col-1.png" alt=""/></div>
-            <div class="col-sm-1"><img src="assets/images/about/pal-col-2.png" alt=""/></div>
-            <div class="col-sm-1"><img src="assets/images/about/pal-col-3.png" alt=""/></div>
-            <div class="col-sm-1"><img src="assets/images/about/pal-col-4.png" alt=""/></div>
-            <div class="col-sm-1"><img src="assets/images/about/pal-col-5.png" alt=""/></div>
+            <div class="col-sm-1"><img src="assets/images/about/pal-col-1.png" alt="red palette"/></div>
+            <div class="col-sm-1"><img src="assets/images/about/pal-col-2.png" alt="orange palette"/></div>
+            <div class="col-sm-1"><img src="assets/images/about/pal-col-3.png" alt="corol palette"/></div>
+            <div class="col-sm-1"><img src="assets/images/about/pal-col-4.png" alt="green palette"/></div>
+            <div class="col-sm-1"><img src="assets/images/about/pal-col-5.png" alt="sand-beige palette"/></div>
           </section>
         </div>
       </section>
 
-      <section class="container--about">
-        <div class="container__sec col-xs-12">
+      <section class="container--about container__sec">
+        <div class="col-xs-12">
           <div class="col-xs-12 col-md-4 list--process" style="box-shadow:none">
             <ul class="list list--coder text">
               <li class="text__h3 list__title">Part Coder</li>
@@ -78,19 +78,12 @@
         </div>
       </section>
 
-      <!-- <section class="container">
-      <div class="container__sec col-xs-12">
-      <img class="avatar-image desktop-img" src="assets/images/about/lapImg.png"/>
-      <h2 class="text__h2">Random Facts</h2>
-    </div>
-  </section> -->
-
-  <section class="container--about">
-    <div class="col-xs-12 container__sec">
+  <section class="container--about container__sec">
+    <div class="col-xs-12">
       <div class="list--process">
         <img class="avatar-image desktop-img" src="assets/images/about/lapImg.png"/>
         <div class="list--container list--process">
-          <ul class="list__process" style="padding-top:50px; padding-left:3px">
+          <ul class="list__process" style="padding-top:30px; padding-left:7px">
             <li class="text__h3 list__title">Random Facts</li>
             <li class="list__elem">God is my everything <3 </li>
               <li class="list__elem">Dancing is my happy place</li>
@@ -105,8 +98,8 @@
       </div>
     </section>
 
-    <section class="container--about">
-      <div class="container__sec col-xs-12 list--process">
+    <section class="container--about container__sec">
+      <div class="col-xs-12 list--process">
         <h2 class="text__h3 list__title"> My Skills</h2>
         <img class="avatar-image level-img" src="assets/images/about/SkillsDiv.png"/>
           <img class="avatar-image level-img-2" style="display:none" src="assets/images/about/skills-chart-v2.webp"/>
