Mobile Menu bar changes
Overlay attempts

--- a/about.html
+++ b/about.html
@@ -13,6 +13,8 @@
 
 <body>
 
+  <div id="topnav--overlay">
+
   <div class="topnav" id="myTopNav">
     <a class="link" href="index.html" style="float:left"><img class="topnav__logo" src="assets/images/icons/sf-logo@2x.png"></a>
     <div class="vertical"></div>
@@ -27,6 +29,7 @@
     <a class="link topnav__link" href="projects.html">projects</a>
     <a class="link topnav__link active-btn" href="about.html">about</a>
     <a class="link topnav__link fa hamburger" href="javascript:void(0);" style="font-size:15px;" onclick="myFunction()">&#xf0c9;</a>
+  </div>
   </div>
 
   <section class="text container--about list--process">
