--- a/index.html
+++ b/index.html
@@ -12,23 +12,30 @@
 </head>
 
 <body>
-  <div class="topnav" id="myTopNav">
-    <a class="link" href="index.html" style="float:left"><img class="topnav__logo" src="assets/images/icons/sf-logo@2x.png"></a>
-    <div class="vertical"></div>
-    <a class="link topnav__link topnav__name disableClick" id="name" style="float:left;">Shandira Ferguson</a>
-    <a class="link topnav__link fa linkedin" id="linkedIn" href="https://www.linkedin.com/in/shandiraferguson/" target="_blank" style="font-size:23px;">&#xf0e1;</a>
-    <a class="link topnav__link fa envelope" id="email" href="#emailIcon">&#xf0e0;<span class="email-text">shandira.ferguson@gmail.com</span></a>
-    <a class="link topnav__link" href="popups.html">pop-ups</a>
-    <a class="link topnav__link" href="sketches.html">sketches</a>
-    <a class="link topnav__link" href="process.html">process</a>
-    <a class="link topnav__link" href="projects.html">projects</a>
-    <a class="link topnav__link" href="about.html">about</a>
-    <a class="link topnav__link fa hamburger" href="javascript:void(0);" style="font-size:15px;" onclick="myFunction()">&#xf0c9;</a>
+
+  <div id="topnav--overlay">
+    
+    <div class="topnav" id="myTopNav">
+      <a class="link" href="index.html" style="float:left"><img class="topnav__logo" src="assets/images/icons/sf-logo@2x.png"></a>
+      <div class="vertical"></div>
+      <a class="link topnav__link topnav__name disableClick" id="name" style="float:left;">Shandira Ferguson</a>
+      <a class="link topnav__link fa linkedin" id="linkedIn" href="https://www.linkedin.com/in/shandiraferguson/" target="_blank" style="font-size:23px;">&#xf0e1;</a>
+      <a class="link topnav__link fa envelope" id="email" href="#emailIcon">&#xf0e0;<span class="email-text">shandira.ferguson@gmail.com</span></a>
+      <a class="link topnav__link" href="popups.html">pop-ups</a>
+      <a class="link topnav__link" href="sketches.html">sketches</a>
+      <a class="link topnav__link" href="process.html">process</a>
+      <a class="link topnav__link" href="projects.html">projects</a>
+      <a class="link topnav__link" href="about.html">about</a>
+      <a class="link topnav__link fa hamburger" href="javascript:void(0);" style="font-size:15px;" onclick="myFunction()">&#xf0c9;</a>
+    </div>
+
+    <div>
+      <img class="animated-gif" id="anim-gif" style="background-attachment:fixed;" src="./assets/videos/home/home-motherhood.gif">
+    </div>
+
   </div>
 
-  <div>
-    <img class="animated-gif" style="background-attachment:fixed;" src="./assets/videos/home/home-motherhood.gif">
-  </div>
+
 
   <div class="anim-text-block--home" style="width:800px; margin:0 auto;">
     <div class="line--home"></div>
