About page - Overlap mods

--- a/about.html
+++ b/about.html
@@ -30,11 +30,10 @@
     <a class="link topnav__link active-btn" href="about.html">about</a>
     <a class="link topnav__link fa hamburger" href="javascript:void(0);" style="font-size:15px;" onclick="myFunction()">&#xf0c9;</a>
   </div>
-  </div>
 
   <section class="text container--about list--process">
     <div class="col-xs-12">
-      <img class="avatar-image" id="about-img" src="assets/images/about/meImg.png"/>
+      <img class="avatar-image" id="about-img" src="assets/images/about/meImg.png"/> </div>
       <h1 class="text__h1" style="padding-top:2px">about me</h1>
       <h2 class="text__h2">I'm a UI/UX Software Engineer
         from the beautiful islands of the Bahamas.</h2>
@@ -43,7 +42,7 @@
           obsessing over Augmented Reality, you'll find me working out at the
           gym, cooking, or at the nearest Carnival Festival. </h3>
           <div class="line" style="width: 99%"></div>
-          <section class="palette">
+          <section class="palette" id="palette-id">
             <div class="col-sm-1"><img src="assets/images/about/pal-col-1.png" alt="red palette"/></div>
             <div class="col-sm-1"><img src="assets/images/about/pal-col-2.png" alt="orange palette"/></div>
             <div class="col-sm-1"><img src="assets/images/about/pal-col-3.png" alt="corol palette"/></div>
@@ -52,6 +51,7 @@
           </section>
         </div>
       </section>
+
 
       <section class="container--about container__sec">
         <div class="col-xs-12">
