--- a/about.html
+++ b/about.html
@@ -13,8 +13,6 @@
 
 <body>
 
-  <div id="topnav--overlay">
-
   <div class="topnav" id="myTopNav">
     <a class="link" href="index.html" style="float:left"><img class="topnav__logo" src="assets/images/icons/sf-logo@2x.png"></a>
     <div class="vertical"></div>
@@ -33,7 +31,7 @@
 
   <section class="text container--about list--process">
     <div class="col-xs-12">
-      <img class="avatar-image" id="about-img" src="assets/images/about/meImg.png"/> </div>
+      <img class="avatar-image" id="about-img" src="assets/images/about/meImg.png"/>
       <h1 class="text__h1" style="padding-top:2px">about me</h1>
       <h2 class="text__h2">I'm a UI/UX Software Engineer
         from the beautiful islands of the Bahamas.</h2>
@@ -42,7 +40,7 @@
           obsessing over Augmented Reality, you'll find me working out at the
           gym, cooking, or at the nearest Carnival Festival. </h3>
           <div class="line" style="width: 99%"></div>
-          <section class="palette" id="palette-id">
+          <section class="palette">
             <div class="col-sm-1"><img src="assets/images/about/pal-col-1.png" alt="red palette"/></div>
             <div class="col-sm-1"><img src="assets/images/about/pal-col-2.png" alt="orange palette"/></div>
             <div class="col-sm-1"><img src="assets/images/about/pal-col-3.png" alt="corol palette"/></div>
@@ -51,7 +49,6 @@
           </section>
         </div>
       </section>
-
 
       <section class="container--about container__sec">
         <div class="col-xs-12">
