Menu - mobile done

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <a class="link topnav__link topnav__name disableClick" id="name" style="float:left;">Shandira Ferguson</a>
     <a class="link topnav__link fa linkedin" id="linkedIn" href="https://www.linkedin.com/in/shandiraferguson/" target="_blank" style="font-size:23px;">&#xf0e1;</a>
     <a class="link topnav__link fa envelope" id="email" href="#emailIcon">&#xf0e0;<span class="email-text">shandira.ferguson@gmail.com</span></a>
-    <a class="link topnav__link" href="popups.html">pop-ups</a>
+    <a class="link topnav__link" id="popups-id" href="popups.html">pop-ups</a>
     <a class="link topnav__link" href="sketches.html">sketches</a>
     <a class="link topnav__link" href="process.html">process</a>
     <a class="link topnav__link" href="projects.html">projects</a>
