Desktop version fixes done

--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
         style="font-size:23px;">&#xf0e1;</a>
     <a class="link topnav__link fa envelope" id="email" href="#emailIcon">&#xf0e0;
       <span class="email-text">shandira.ferguson@gmail.com</span></a>
-    <a class="link topnav__link" href="popups.html">pop-ups</a>
+    <a class="link topnav__link" id="popups-id" href="popups.html">pop-ups</a>
     <a class="link topnav__link" href="sketches.html">sketches</a>
     <a class="link topnav__link" href="process.html">process</a>
     <a class="link topnav__link" href="projects.html">projects</a>
@@ -29,7 +29,7 @@
     <a class="link topnav__link fa hamburger" href="javascript:void(0);" style="font-size:15px;" onclick="myFunction()">&#xf0c9;</a>
   </div>
 
-  <section class="text container--about list--process">
+  <section class="text container--about about--list--process">
     <div class="col-xs-12">
       <img class="avatar-image" id="about-img" src="assets/images/about/meImg.png"/>
       <h1 class="text__h1" style="padding-top:2px">about me</h1>
@@ -52,7 +52,7 @@
 
       <section class="container--about container__sec">
         <div class="col-xs-12">
-          <div class="col-xs-12 col-md-4 list--process" style="box-shadow:none">
+          <div class="col-xs-12 col-md-4 about--list--process" style="box-shadow:none">
             <ul class="list list--coder text">
               <li class="text__h3 list__title">Part Coder</li>
               <li class="list__elem">Front-end development</li>
@@ -62,10 +62,10 @@
               <li class="list__elem">Sleep deprivation</li>
             </ul>
           </div>
-          <div class="col-xs-12 col-md-4 list--process" style="box-shadow:none">
+          <div class="col-xs-12 col-md-4 about--list--process" style="box-shadow:none">
             <img class="avatar-image pie-img" src="assets/images/about/Pie.png"/>
           </div>
-          <div class="col-xs-12 col-md-4 list--process" style="box-shadow:none">
+          <div class="col-xs-12 col-md-4 about--list--process" style="box-shadow:none">
             <ul class="list list--designer text">
               <li class="text__h3 list__title">Part Designer</li>
               <li class="list__elem">UX design</li>
@@ -80,9 +80,9 @@
 
   <section class="container--about container__sec">
     <div class="col-xs-12">
-      <div class="list--process">
+      <div class="about--list--process">
         <img class="avatar-image desktop-img" src="assets/images/about/lapImg.png"/>
-        <div class="list--container list--process">
+        <div class="list--container about--list--process">
           <ul class="list__process" style="padding-top:30px; padding-left:7px">
             <li class="text__h3 list__title">Random Facts</li>
             <li class="list__elem">God is my everything <3 </li>
@@ -99,7 +99,7 @@
     </section>
 
     <section class="container--about container__sec">
-      <div class="col-xs-12 list--process">
+      <div class="col-xs-12 about--list--process">
         <h2 class="text__h3 list__title"> My Skills</h2>
         <img class="avatar-image level-img" src="assets/images/about/SkillsDiv.png"/>
           <img class="avatar-image level-img-2" style="display:none" src="assets/images/about/skills-chart-v2.webp"/>
