--- a/projects.html
+++ b/projects.html
@@ -24,7 +24,7 @@
     style="font-size:23px;">&#xf0e1;</a>
     <a class="link topnav__link fa envelope" id="email" href="#emailIcon">&#xf0e0;
       <span class="email-text">shandira.ferguson@gmail.com</span></a>
-      <a class="link topnav__link" href="popups.html">pop-ups</a>
+      <a class="link topnav__link" id="popups-id" href="popups.html">pop-ups</a>
       <a class="link topnav__link" href="sketches.html">sketches</a>
       <a class="link topnav__link" href="process.html">process</a>
       <a class="link topnav__link active-btn" href="#projects">projects</a>
