Home video headline done
Swap successful. Might consider resizing height

--- a/index.html
+++ b/index.html
@@ -26,8 +26,12 @@
     <a class="link topnav__link fa hamburger" href="javascript:void(0);" style="font-size:15px;" onclick="myFunction()">&#xf0c9;</a>
   </div>
 
-  <div>
-    <img class="animated-gif" style="background-attachment:fixed;" src="./assets/videos/home/home-motherhood.gif">
+  <div class="video-overlay">
+    <!-- <img class="animated-gif" style="background-attachment:fixed;" src="./assets/videos/home/home-motherhood.gif"> -->
+    <video width="100%" autoplay="autoplay" class="video-container" playsinline loop>
+      <source src="./assets/videos/home/home-intro-headline-full.mp4" type="video/mp4"></source>
+      Your browser does not support the video tag
+    </video>
   </div>
 
   <div class="anim-text-block--home" style="width:800px; margin:0 auto;">
