--- a/index.html
+++ b/index.html
@@ -43,14 +43,14 @@
   </div>
 
   <div class="media-list" style="padding: 0px 3%;">
-    <iframe width="500" height="315" src="https://www.youtube.com/embed/2F9pL06IC8k"
-    frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+    <iframe src="https://player.vimeo.com/video/416601157" width="500" height="315"
+    frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
 
-    <iframe width="500" height="315" src="https://www.youtube.com/embed/2F9pL06IC8k"
-    frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+    <iframe src="https://player.vimeo.com/video/416601252" width="500" height="315"
+    frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
 
-    <iframe width="500" height="315" src="https://www.youtube.com/embed/2F9pL06IC8k"
-    frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+    <iframe src="https://player.vimeo.com/video/416601334" width="500" height="315"
+    frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
   </div>
 
   <footer class="footer">
