--- a/process.html
+++ b/process.html
@@ -35,7 +35,7 @@
     </section>
 
     <section class="container">
-      <div class="col-xs-12 container__sec">
+      <div class="col-xs-12 container__sec__about">
         <div class="list--process">
           <img class="avatar-image process-img" src="assets/images/process/TyImg.png"/>
           <div class="list--container list--process">
@@ -63,7 +63,7 @@
     </section>
 
     <section class="container">
-      <div class="col-xs-12 container__sec">
+      <div class="col-xs-12 container__sec__about">
         <div class="list--process">
           <img class="avatar-image process-img" src="assets/images/process/BobImg.png"/>
           <div class="list--container list--process">
@@ -91,7 +91,7 @@
     </section>
 
     <section class="container">
-      <div class="col-xs-12 container__sec">
+      <div class="col-xs-12 container__sec__about">
         <div class="list--process">
           <img class="avatar-image process-img" src="assets/images/process/BabiesImg.png"/>
           <div class="list--container list--process">
