--- a/projects.html
+++ b/projects.html
@@ -41,17 +41,35 @@
     <section class="vid-section">
       <!-- <h2 class="text__h1 proj-subtitles" style="padding-top:32%;">Final products</h2> -->
       <div class="media-list" style= "box-shadow:none">
-        <iframe width="500" height="315" src="https://www.youtube.com/embed/2F9pL06IC8k"
-        frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+        <iframe src="https://player.vimeo.com/video/416601963" width="500" height="315"
+        frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
 
-        <iframe width="500" height="315" src="https://www.youtube.com/embed/2F9pL06IC8k"
-        frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+        <iframe src="https://player.vimeo.com/video/416602091" width="500" height="315"
+        frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
 
-        <iframe width="500" height="315" src="https://www.youtube.com/embed/2F9pL06IC8k"
-        frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+        <iframe src="https://player.vimeo.com/video/416601157" width="500" height="315"
+        frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
 
-        <iframe width="500" height="315" src="https://www.youtube.com/embed/2F9pL06IC8k"
-        frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+        <iframe src="https://player.vimeo.com/video/416601480" width="500" height="315"
+        frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+
+        <iframe src="https://player.vimeo.com/video/416602215" width="500" height="315"
+        frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+
+        <iframe src="https://player.vimeo.com/video/416602328" width="500" height="315"
+        frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+
+        <iframe src="https://player.vimeo.com/video/416602633" width="500" height="315"
+        frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+
+        <iframe src="https://player.vimeo.com/video/416602761" width="500" height="315"
+        frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+
+        <iframe src="https://player.vimeo.com/video/416601252" width="500" height="315"
+        frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+
+        <iframe src="https://player.vimeo.com/video/416601334" width="500" height="315" 
+        frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
       </div>
     </section>
 
