Final Web Dev Submission - sat. May 9th, 2020
Website complete - for now! :smile:

--- a/sketches.html
+++ b/sketches.html
@@ -36,7 +36,7 @@
 
   <section>
     <div class="col-xs-12" style="box-shadow:none">
-      <img class="headline-img" src="./assets/images/sketches/sketches-headline.png"/>
+      <img class="headline-img" id="sketches-img" src="./assets/images/sketches/sketches-headline.png"/>
     </div>
   </section>
 
